# ZeroML-fork

./: .env.example  Readme.md
.github/workflows/: deploy-backend-to-hf.yml
api/: cleaned_9ecac022-0f8b-4ef0-bcf6-3be464b4ce22.csv  main.py  pyproject.toml
api/app/components/Cleaning/: clean.py
api/app/components/ExtractFile/: extract.py
api/app/components/Upload/: data_upload.py  upload.py
api/app/logging/: logging_config.py
api/app/routes/: routes.py
api/app/utils/: session.py
backend/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
backend/app/routes/: routes.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/builder/: page.tsx
frontend/app/signin/: page.tsx
frontend/components/: AnimatedBackground.tsx  CTA.tsx  DataSourceUpload.tsx  HeroSection.tsx  MainLayout.tsx  Navigation.tsx  PipelineBuilder.tsx  Stats.tsx
frontend/components/pipeline-utils/: CleanData.ts  TrainModel.ts
frontend/components/ui/: alert-dialog.tsx  textarea.tsx  toaster.tsx  toggle-group.tsx
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/docs/: page.tsx
web/app/train/: page.tsx
web/components/: CTA.tsx  CleaningPage.tsx  Dashboard.tsx  DataSourceUpload.tsx  Features.tsx  Footer.tsx  HeroSection.tsx  PipelineBuilder.tsx  Platform.tsx  Saving.tsx  Stats.tsx  TrainingPage.tsx
web/components/pipeline-utils/: EvaluateModel.ts
web/context/: SessionContext.tsx
(+2 files in other folders)
