[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "logging>=0.4.9.6",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
    "huggingface-hub",
    "pandas",
    "python-multipart",
    "dotenv>=0.9.9",
    "pyreadstat>=1.3.1",
    "lxml>=6.0.1",
    "html5lib>=1.1",
    "beautifulsoup4>=4.13.5",
    "openai",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app", "app.*"]
